Couch page responsive

--- a/src/pages/couch.liquid
+++ b/src/pages/couch.liquid
@@ -16,49 +16,55 @@ permalink: couch/
 
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>✊</text></svg>">
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Handlee&family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/assets/couch/common.css">
   <link rel="stylesheet" href="/assets/couch/couch.css">
 </head>
 <body>
   {% include header %}
   <div id="top">
-    <img src="/assets/couch/composition.jpg" alt="You Got This From Home. January 15 & 16 2021.">
+    <img src="/assets/couch/composition.png" class='d' alt="You Got This From Home. January 15 & 16 2021.">
+    <img src="/assets/couch/composition-mobile.png" class='m' alt="You Got This From Home. January 15 & 16 2021.">
+    <div class="m">
+      
+    </div>
   </div>
 
-  <section style="background: var(--yellow)">
-    <div class="inner">
-      <h1>What is You Got This From Your Couch?</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur pariatur et eveniet delectus ipsa voluptatem ab quaerat neque. Ipsa veniam, placeat quisquam repudiandae quo aspernatur eveniet deserunt. Repudiandae, debitis itaque?</p>
-    </div>
-  </section>
+  <div id="sections">
+    <section style="background: var(--yellow)">
+      <div class="inner">
+        <h1>What is You Got This From Your Couch?</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur pariatur et eveniet delectus ipsa voluptatem ab quaerat neque. Ipsa veniam, placeat quisquam repudiandae quo aspernatur eveniet deserunt. Repudiandae, debitis itaque?</p>
+      </div>
+    </section>
 
-  <section style="background: var(--green)">
-    <div class="inner">
-      <h1>Submit a talk</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur pariatur et eveniet delectus ipsa voluptatem ab quaerat neque. Ipsa veniam, placeat quisquam repudiandae quo aspernatur eveniet deserunt. Repudiandae, debitis itaque?</p>
-    </div>
-  </section>
+    <section style="background: var(--green)">
+      <div class="inner">
+        <h1>Submit a talk</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur pariatur et eveniet delectus ipsa voluptatem ab quaerat neque. Ipsa veniam, placeat quisquam repudiandae quo aspernatur eveniet deserunt. Repudiandae, debitis itaque?</p>
+      </div>
+    </section>
 
-  <section style="background: var(--red)">
-    <div class="inner">
-      <h1>Workshops</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur pariatur et eveniet delectus ipsa voluptatem ab quaerat neque. Ipsa veniam, placeat quisquam repudiandae quo aspernatur eveniet deserunt. Repudiandae, debitis itaque?</p>
-    </div>
-  </section>
+    <section style="background: var(--red)">
+      <div class="inner">
+        <h1>Workshops</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur pariatur et eveniet delectus ipsa voluptatem ab quaerat neque. Ipsa veniam, placeat quisquam repudiandae quo aspernatur eveniet deserunt. Repudiandae, debitis itaque?</p>
+      </div>
+    </section>
 
-  <section style="background: var(--blue)">
-    <div class="inner">
-      <h1>Sponsorship</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur pariatur et eveniet delectus ipsa voluptatem ab quaerat neque. Ipsa veniam, placeat quisquam repudiandae quo aspernatur eveniet deserunt. Repudiandae, debitis itaque?</p>
-    </div>
-  </section>
+    <section style="background: var(--blue)">
+      <div class="inner">
+        <h1>Sponsorship</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur pariatur et eveniet delectus ipsa voluptatem ab quaerat neque. Ipsa veniam, placeat quisquam repudiandae quo aspernatur eveniet deserunt. Repudiandae, debitis itaque?</p>
+      </div>
+    </section>
 
-  <section style="background: var(--yellow)">
-    <div class="inner">
-      <h1>Frequently Asked Questions</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur pariatur et eveniet delectus ipsa voluptatem ab quaerat neque. Ipsa veniam, placeat quisquam repudiandae quo aspernatur eveniet deserunt. Repudiandae, debitis itaque?</p>
-    </div>
-  </section>
+    <section style="background: var(--yellow)">
+      <div class="inner">
+        <h1>Frequently Asked Questions</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur pariatur et eveniet delectus ipsa voluptatem ab quaerat neque. Ipsa veniam, placeat quisquam repudiandae quo aspernatur eveniet deserunt. Repudiandae, debitis itaque?</p>
+      </div>
+    </section>
+  </div>
+
 
   <div class="bottom">
     <img src="/assets/couch/cat.svg" alt="Cat cartoon">
