--- a/src/pages/couch.liquid
+++ b/src/pages/couch.liquid
@@ -87,7 +87,20 @@ sponsor-list:
     <section style="background: var(--red)">
       <div class="inner">
         <h1>Frequently Asked Questions</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur pariatur et eveniet delectus ipsa voluptatem ab quaerat neque. Ipsa veniam, placeat quisquam repudiandae quo aspernatur eveniet deserunt. Repudiandae, debitis itaque?</p>
+        <dt>How much will tickets cost?</dt>
+        <dd>Workshop tickets will be £25 each or £70 for all three. The conference is free of charge. Tickets for all will be available on November 1 2020. <a href="https://buttondown.email/yougotthisconf">Register to our mailing list for a reminder.</a></dd>
+        <dt>What are you doing to make this event accessible?</dt>
+        <dd>The event will be live captioned and will be included in the stream. Post-event we will provide recordings and transcripts. Speakers are paid for their time. A number of free tickets will be made available for our workshops as part of our inclusion program.</dd>
+        <dt>Will the talks be recorded?</dt>
+        <dd>The conference talks will be recorded, but the workshops will not be recorded.</dd>
+        <dt>How does your talk submission process work?</dt>
+        <dd>Submit before the end of September 30 2020. We will anonymize submissions of names, pronouns, and any other identifying features. Once this is done, we will provide submissions to an external panel for review. We will respond to every submission by October 20 2020, but won't be able to provide feedback on submissions.</dd>
+        <dt>How does your inclusion programme work?</dt>
+        <dd>Our inclusion programme provides workshop tickets for those in under-represented groups in tech. This includes, but isn't limited to: LGBTQIA+ people, people of colour, women, non-binary people, and those with disabilities. Applications will be open November 1 to November 15, will be a short 5 minute form, and prioritizes our understanding of what you will hope to get out of the event over the need to disclose any sensitive information.</dd>
+        <dt>Who is behind You Got This?</dt>
+        <dd>You Got This is a network of community conferences facilitated by <a href="https://twitter.com/_phzn">Kevin Lewis</a>. You Got This From Your Couch replaces You Got This London 2021 and is organized by Kevin, <a href="https://twitter.com/thekatiejoy">Katie Whittington</a>, <a href="https://twitter.com/MarkelaZeneli">Markela Zeneli</a> and <a href="https://twitter.com/RedRoxProjects">Amy Dickens</a>.</dd>
+        <dt>How can I ask more questions?</dt>
+        <dd>Send them over to <a href="mailto:kevin@yougotthis.io">kevin@yougotthis.io</a> and if the question is likely to be useful to others we will update this FAQ.</dd>
       </div>
     </section>
 
