--- a/src/assets/couch/couch.css
+++ b/src/assets/couch/couch.css
@@ -104,6 +104,15 @@ section a {
   margin: 0 auto;
 }
 
+dt {
+  margin-top: 1em;
+  font-weight: bold;
+}
+
+dd {
+
+}
+
 @media screen and (max-width: 800px) {
   #top img.d {
     display: none;
