--- a/src/pages/couch.liquid
+++ b/src/pages/couch.liquid
@@ -9,7 +9,7 @@ sponsor-list:
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Jan 15/16 2021 - You Got This From Your Couch</title>
+  <title>Jan 15 & 16 2021 - You Got This From Your Couch</title>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
