--- a/src/pages/couch.liquid
+++ b/src/pages/couch.liquid
@@ -111,19 +111,7 @@ sponsor-list:
     <img src="/assets/couch/cat.svg" alt="Cat cartoon">
   </div>
 
-  <footer>
-    <div class='left'>
-      <p>You Got This is a network of community conferences focused on core, non-technical skills. It is coordinated by <a href="https://twitter.com/_phzn">Kevin Lewis</a> with events currently run by Kevin, Markela, Amy, Katie, Benjamin and Shy.</p>
-      <a href="https://github.com/yougotthisconf/yougotthis.io">Code on GitHub</a>
-    </div>
-    <div class="right">
-      <a href="/tags/you-got-this-london-2019/">You Got This London 2019 Talks</a>
-      <a href="/tags/you-got-this-birmingham-2020/">You Got This Birmingham 2020 Talks</a>
-      <a href="/tags/you-got-this-2020-from-home/">You Got This 2020 From Home Talks</a>
-      <a href="/run/">Run Your Own You Got This Event</a>
-      <a href="mailto:kevin@yougotthis.io">Interested in Sponsoring?</a>
-    </div>
-  </footer>
+  {% include footer %}
 
 </body>
 </html>
