--- a/src/_includes/home_top.liquid
+++ b/src/_includes/home_top.liquid
@@ -1,5 +1,6 @@
 <div id="home-top">
-  <h1>You Got This</h1>
+  <img src="/assets/img/homepage/you-got-this.svg" alt="Cartoon fist with code symbol tattoo on wrist. You Got This is written next to it.">
+  {% comment %} <h1>You Got This</h1> {% endcomment %}
   <p>A network of community conferences on the non-technical 'core' skills needed for a happy, healthy work life. 
   <span>Let's talk more about the skills that require emotional labor.</span></p>
 </div>
