--- a/src/pages/couch.liquid
+++ b/src/pages/couch.liquid
@@ -13,7 +13,7 @@ sponsor-list:
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:image" content="https://yougotthis.io/assets/img/og.png">
+  <meta property="og:image" content="https://yougotthis.io/assets/couch/og.png">
   <meta name="description" content="A network of community conferences on the non-technical 'core' skills needed for a happy, healthy work life.">
   <meta name="og:description" content="A network of community conferences on the non-technical 'core' skills needed for a happy, healthy work life.">
   <meta name="monetization" content="$ilp.uphold.com/DBEbnWEmPyJJ">
