"what is ygtfyc" description on home

--- a/src/pages/couch.liquid
+++ b/src/pages/couch.liquid
@@ -36,7 +36,7 @@ sponsor-list:
     <section style="background: var(--yellow)">
       <div class="inner">
         <h1>What is You Got This From Your Couch?</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur pariatur et eveniet delectus ipsa voluptatem ab quaerat neque. Ipsa veniam, placeat quisquam repudiandae quo aspernatur eveniet deserunt. Repudiandae, debitis itaque?</p>
+        <p>A digital community conference, which focuses on the non-technical 'core' skills for a happy, healthy work life. Tickets will grant you access to our workshops on Fri 15th, and the talks will be streamed online (for free!) on Sat 16th.</p>
       </div>
     </section>
 
