"submit a talk description completed on home"

--- a/src/pages/couch.liquid
+++ b/src/pages/couch.liquid
@@ -43,7 +43,7 @@ sponsor-list:
     <section style="background: var(--green)">
       <div class="inner">
         <h1>Submit a talk</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur pariatur et eveniet delectus ipsa voluptatem ab quaerat neque. Ipsa veniam, placeat quisquam repudiandae quo aspernatur eveniet deserunt. Repudiandae, debitis itaque?</p>
+        <p>If you are interested in giving a talk, click here to fill out our CFP to submit your talk. The deadline is 30th September 2020, we welcome beginners and the experienced alike!</p>
       </div>
     </section>
 
