"Added speakers price to the submit a talk section on the home page"

--- a/src/pages/couch.liquid
+++ b/src/pages/couch.liquid
@@ -43,7 +43,7 @@ sponsor-list:
     <section style="background: var(--green)">
       <div class="inner">
         <h1>Submit a talk</h1>
-        <p>If you are interested in giving a talk, click here to fill out our CFP to submit your talk. The deadline is 30th September 2020, we welcome beginners and the experienced alike!</p>
+        <p>If you are interested in giving a talk, click here to fill out our CFP to submit your talk. Speakers will be paid £150 for their 25 minute talk with a 10 minute curated Q & A from the audience. The deadline is 30th September 2020, we welcome beginners and the experienced alike!</p>
       </div>
     </section>
 
