--- a/src/pages/couch.liquid
+++ b/src/pages/couch.liquid
@@ -36,14 +36,16 @@ sponsor-list:
     <section style="background: var(--yellow)">
       <div class="inner">
         <h1>What is You Got This From Your Couch?</h1>
-        <p>A digital community conference, which focuses on the non-technical 'core' skills for a happy, healthy work life. Tickets will grant you access to our workshops on Fri 15th, and the talks will be streamed online (for free!) on Sat 16th.</p>
+        <p>An online community conference, which focuses on the non-technical 'core' skills for a happy, healthy work life. In the past we've had talks about ethics in tech, self-care, and learning. Workshops will take place on on Friday 15th January 2021, and conference talks will be streamed online (for free!) on Saturday 16th January 2021. <a href="/assets/couch/couch.ics">Calendar reminder.</a></p>
+        <p>Tickets will be available on Sunday 1st November 2020. <a href="/assets/couch/tickets.ics">Calendar reminder.</a></p>
       </div>
     </section>
 
     <section style="background: var(--green)">
       <div class="inner">
         <h1>Submit a talk</h1>
-        <p>If you are interested in giving a talk, click here to fill out our CFP to submit your talk. Speakers will be paid £150 for their 25 minute talk with a 10 minute curated Q & A from the audience. The deadline is 30th September 2020, we welcome beginners and the experienced alike!</p>
+        <p>Talks at You Got This From Your Couch are all 25 minutes and will take place between 10am and 6pm UK time on Saturday 16th January 2021. We are able to pay speakers £150 for their time, and welcome beginners and the experienced alike.</p>
+        <p><a href="" onclick="alert('Talk submissions open Thursday 1st September 2020')">Submit a talk before the end of Wednesday September 30th 2020.</a></p>
       </div>
     </section>
 
@@ -65,12 +67,12 @@ sponsor-list:
           </span>
           <article id="sponsor-info">
             <p>Sponsors allow us to keep You Got This workshops affordable and the online conference free to access. We pay our speakers, have a live captioner, and provide a number of free tickets to paid activities as part of our inclusion programme.</p>
-            <p><b>Key info: </b> 20-40 in each workshop, 300 for conference live (plus further views on-demand). Audience is a mix of primarily early-career and mid-career developers. We also have content for team leaders, though they make up a smaller amount of our audience.</p>
+            <p><b>Key info: </b> Expected 20-40 people in each workshop, 300 people for conference live (plus further views on-demand). Audience is a mix of primarily early-career and mid-career developers. We also have content for team leaders, though they make up a smaller amount of our audience.</p>
             <p><b>Sponsorship Tier 1 (£1,000): </b>Logo on site, in tweets of thanks, incorporated in livestream graphics, and in front/end bumpers for talk recordings. 5 min pre-recorded talking slot during conference day. Sponsor channel in community Discord during January. Can run a raffle during event.</p>
             <p><b>Sponsorship Tier 2 (£3,000): </b>Everything in Tier 1, Co-brand event (presented by ACME Corp, for example), 10 minute live talking slot on conference day. One available</p>
             <p><b>Extras: </b> Pay for one day of captioning for £1,700 (two available).</p>
             <p><b>Previous sponsors:</b> AND Digital, Auth0, Balsamiq, BuzzFeed, Contentful, DigitalOcean, DXW Digital, Futuregov, GitHub, Hired, Indee, LaunchDarkly, MongoDB, Monzo, Mozilla, Nedap, NotBinary, Proactive, Pusher, Samsung Internet, Twilio, Verge, Vonage and Wild Rocket.</p>
-            <p><b>Interested?</b> Excellent! Send an email to <a href="mailto:kevin@yougotthis.io">kevin@yougotthis.io</a>.</p>
+            <p><b>Interested?</b> Excellent! Send an email to <a href=" mailto:kevin@yougotthis.io">kevin@yougotthis.io</a>.</p>
           </article>
         </div>
       </div>
@@ -88,15 +90,15 @@ sponsor-list:
       <div class="inner">
         <h1>Frequently Asked Questions</h1>
         <dt>How much will tickets cost?</dt>
-        <dd>Workshop tickets will be £25 each or £70 for all three. The conference is free of charge. Tickets for all will be available on November 1 2020. <a href="https://buttondown.email/yougotthisconf">Register to our mailing list for a reminder.</a></dd>
+        <dd>Workshop tickets will be £25 each or £70 for all three. The conference is free of charge. Tickets for all will be available on Sunday 1st November 2020. <a href="https://buttondown.email/yougotthisconf">Register to our mailing list for a reminder.</a></dd>
         <dt>What are you doing to make this event accessible?</dt>
         <dd>The event will be live captioned and will be included in the stream. Post-event we will provide recordings and transcripts. Speakers are paid for their time. A number of free tickets will be made available for our workshops as part of our inclusion program.</dd>
         <dt>Will the talks be recorded?</dt>
         <dd>The conference talks will be recorded, but the workshops will not be recorded.</dd>
         <dt>How does your talk submission process work?</dt>
-        <dd>Submit before the end of September 30 2020. We will anonymize submissions of names, pronouns, and any other identifying features. Once this is done, we will provide submissions to an external panel for review. We will respond to every submission by October 20 2020, but won't be able to provide feedback on submissions.</dd>
+        <dd>Submit before the end of Wednesday 30th September 2020. We will anonymize submissions of names, pronouns, and any other identifying features. Once this is done, we will provide submissions to an external panel for review. We will respond to every submission by October 20 2020, but won't be able to provide feedback on submissions.</dd>
         <dt>How does your inclusion programme work?</dt>
-        <dd>Our inclusion programme provides workshop tickets for those in under-represented groups in tech. This includes, but isn't limited to: LGBTQIA+ people, people of colour, women, non-binary people, and those with disabilities. Applications will be open November 1 to November 15, will be a short 5 minute form, and prioritizes our understanding of what you will hope to get out of the event over the need to disclose any sensitive information.</dd>
+        <dd>Our inclusion programme provides workshop tickets for those in under-represented groups in tech. This includes, but isn't limited to: LGBTQIA+ people, people of colour, women, non-binary people, and those with disabilities. Applications will be open Sunday 1st November 2020 to Sunday 15th November 2020, will be a short 5 minute form, and prioritizes our understanding of what you will hope to get out of the event over the need to disclose any sensitive information.</dd>
         <dt>Who is behind You Got This?</dt>
         <dd>You Got This is a network of community conferences facilitated by <a href="https://twitter.com/_phzn">Kevin Lewis</a>. You Got This From Your Couch replaces You Got This London 2021 and is organized by Kevin, <a href="https://twitter.com/thekatiejoy">Katie Whittington</a>, <a href="https://twitter.com/MarkelaZeneli">Markela Zeneli</a> and <a href="https://twitter.com/RedRoxProjects">Amy Dickens</a>.</dd>
         <dt>How can I ask more questions?</dt>
