coc mention on couch page

--- a/src/pages/couch.liquid
+++ b/src/pages/couch.liquid
@@ -92,7 +92,7 @@ sponsor-list:
         <dt>How much will tickets cost?</dt>
         <dd>Workshop tickets will be £25 each or £70 for all three. The conference is free of charge. Tickets for all will be available on Sunday 1st November 2020. <a href="https://buttondown.email/yougotthisconf">Register to our mailing list for a reminder.</a></dd>
         <dt>What are you doing to make this event accessible?</dt>
-        <dd>The event will be live captioned and will be included in the stream. Post-event we will provide recordings and transcripts. Speakers are paid for their time. A number of free tickets will be made available for our workshops as part of our inclusion program.</dd>
+        <dd>The event will be live captioned and will be included in the stream. Post-event we will provide recordings and transcripts. Speakers are paid for their time. A number of free tickets will be made available for our workshops as part of our inclusion program. We take the enforcement of our <a href="/conduct">Code of Conduct</a> very seriously.</dd>
         <dt>Will the talks be recorded?</dt>
         <dd>The conference talks will be recorded, but the workshops will not be recorded.</dd>
         <dt>How does your talk submission process work?</dt>
