--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -22,7 +22,7 @@ $grey: #5F6C7B;
   --orange: #{$orange};
   --dark: #{$dark};
   --grey: #{$grey};
-  --body_color: #{$body__color};
+  --body__color: #{$body__color};
 
   --font__body: 'EB Garamond', serif;
   --font__header: 'IBM Plex Sans', sans-serif;
