--- a/src/_includes/home_top.liquid
+++ b/src/_includes/home_top.liquid
@@ -1,5 +1,5 @@
 <div id="home-top">
-  <img src="/assets/img/homepage/you-got-this.svg" alt="Cartoon fist with code symbol tattoo on wrist. You Got This is written next to it.">
+  <img src="/assets/img/homepage/you-got-this-all-fists.svg" alt="You Got This Conferences, with all previous event logos above the text">
   <p>A network of community conferences on the non-technical 'core' skills needed for a happy, healthy work life. 
   <span>Let's talk more about the skills that require emotional labor.</span></p>
 </div>
