--- a/src/pages/couch.liquid
+++ b/src/pages/couch.liquid
@@ -4,6 +4,9 @@ sponsor-list:
   - name: Balsamiq
     file: balsamiq
     url: https://balsamiq.com/
+  - name: Mux
+    file: mux
+    url: https://mux.com/
 ---
 
 <!DOCTYPE html>
