--- a/src/_layouts/base.liquid
+++ b/src/_layouts/base.liquid
@@ -7,7 +7,8 @@
       <title>You Got This - Core Skills Conferences</title>
     {% endif %}
 
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="/assets/css/tailwind.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Handlee&family=IBM+Plex+Sans:wght@700&display=swap" rel="stylesheet">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>✊</text></svg>">
 
@@ -20,7 +21,7 @@
   </head>
   <body>
     {% include header %}
-    <div class="page wrapper">
+    <div class="page">
       {{content | safe}}
     </div>
     {% include footer %}
