--- a/src/_includes/header.liquid
+++ b/src/_includes/header.liquid
@@ -2,8 +2,9 @@
   {% comment %} Desktop Menu {% endcomment %}
   <div class="flex justify-between items-center px-4 py-6 sm:px-6 md:justify-start md:space-x-10">
     <div class="lg:w-0 lg:flex-1">
-      <a href="#" class="flex">
+      <a href="#" class="flex items-center">
         <img class="h-8 w-auto sm:h-10" src="/assets/img/fist.svg" alt="Fist with Code Tattoo">
+        <h1 class="sm:text-2xl pl-4 font-bold">You Got This</h1>
       </a>
     </div>
     <div id="mobile-menu-open" class="-mr-2 -my-2 md:hidden">
@@ -20,7 +21,7 @@
     </nav>
     <div class="hidden md:flex items-center justify-end space-x-8 md:flex-1 lg:w-0">
       <span class="inline-flex rounded-md shadow-sm">
-        <a href="/talks" class="whitespace-no-wrap inline-flex items-center justify-center px-4 py-2 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-pink-600 hover:bg-pink-500 focus:outline-none focus:border-pink-700 focus:shadow-outline-pink active:bg-pink-700 transition ease-in-out duration-150">Talks</a>
+        <a href="/talks" class="whitespace-no-wrap inline-flex items-center justify-center px-4 py-2 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-pink-600 hover:bg-pink-500 focus:outline-none focus:border-pink-700 focus:shadow-outline-pink active:bg-pink-700 transition ease-in-out duration-150">Talk Library</a>
       </span>
     </div>
   </div>
@@ -51,7 +52,7 @@
           </div>
           <div class="space-y-6">
             <span class="w-full flex rounded-md shadow-sm">
-              <a href="/talks" class="w-full flex items-center justify-center px-4 py-2 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-pink-600 hover:bg-pink-500 focus:outline-none focus:border-pink-700 focus:shadow-outline-pink active:bg-pink-700 transition ease-in-out duration-150">Talks</a>
+              <a href="/talks" class="w-full flex items-center justify-center px-4 py-2 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-pink-600 hover:bg-pink-500 focus:outline-none focus:border-pink-700 focus:shadow-outline-pink active:bg-pink-700 transition ease-in-out duration-150">Talk Library</a>
             </span>
           </div>
         </div>
