tailwind home hero

--- a/src/pages/home.liquid
+++ b/src/pages/home.liquid
@@ -5,7 +5,7 @@ permalink: /
 ---
 
 <div id="home">
-  {% include home_top %}
+  {% include home_hero %}
   {% include home_photos %}
   {% include home_upcoming %}
   {% include talks_list, title: 'Talks From Previous Events' %}
