--- a/src/_includes/header.liquid
+++ b/src/_includes/header.liquid
@@ -2,9 +2,9 @@
   {% comment %} Desktop Menu {% endcomment %}
   <div class="flex justify-between items-center px-4 py-6 sm:px-6 md:justify-start md:space-x-10">
     <div class="lg:w-0 lg:flex-1">
-      <a href="#" class="flex items-center">
+      <a href="/" class="flex items-center">
         <img class="h-8 w-auto sm:h-10" src="/assets/img/fist.svg" alt="Fist with Code Tattoo">
-        <h1 class="sm:text-2xl pl-4 font-bold">You Got This</h1>
+        <h1 class="sm:text-l lg:text-2xl pl-4 font-bold text-pink-600">You Got This</h1>
       </a>
     </div>
     <div id="mobile-menu-open" class="-mr-2 -my-2 md:hidden">
@@ -20,6 +20,7 @@
       <a href="/twitter" class="text-base leading-6 font-medium text-gray-500 hover:text-gray-900 focus:outline-none focus:text-gray-900 transition ease-in-out duration-150">Twitter</a>
     </nav>
     <div class="hidden md:flex items-center justify-end space-x-8 md:flex-1 lg:w-0">
+      <a href="/conduct" class="text-base leading-6 font-medium text-gray-500 hover:text-gray-900 focus:outline-none  focus:text-gray-900 transition ease-in-out duration-150">Conduct</a>
       <span class="inline-flex rounded-md shadow-sm">
         <a href="/talks" class="whitespace-no-wrap inline-flex items-center justify-center px-4 py-2 border border-transparent text-base leading-6 font-medium rounded-md text-white bg-pink-600 hover:bg-pink-500 focus:outline-none focus:border-pink-700 focus:shadow-outline-pink active:bg-pink-700 transition ease-in-out duration-150">Talk Library</a>
       </span>
@@ -27,14 +28,14 @@
   </div>
 
   {% comment %} Mobile Menu {% endcomment %}
-  <div id="mobile-menu" class="absolute top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden hidden">
+  <div id="mobile-menu" class="absolute top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden hidden z-10">
     <div class="rounded-lg shadow-lg">
       <div class="rounded-lg shadow-xs bg-white divide-y-2 divide-gray-50">
         <div class="pt-5 pb-6 px-5 space-y-6">
           <div class="flex items-center justify-between">
-            <div>
+            <a href="/">
               <img class="h-8 w-auto" src="/assets/img/fist.svg" alt="Fist with Code Tattoo">
-            </div>
+            </a>
             <div class="-mr-2">
               <button id="mobile-menu-close" type="button" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:text-gray-500 transition duration-150 ease-in-out">
                 <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -49,6 +50,7 @@
             <a href="/discord" class="text-base leading-6 font-medium text-gray-900 hover:text-gray-700 transition ease-in-out duration-150">Discord</a>            
             <a href="/newsletter" class="text-base leading-6 font-medium text-gray-900 hover:text-gray-700 transition ease-in-out duration-150">Newsletter</a>            
             <a href="/twitter" class="text-base leading-6 font-medium text-gray-900 hover:text-gray-700 transition ease-in-out duration-150">Twitter</a>            
+            <a href="/conduct" class="text-base leading-6 font-medium text-gray-900 hover:text-gray-700 transition ease-in-out duration-150">Code of Conduct</a>            
           </div>
           <div class="space-y-6">
             <span class="w-full flex rounded-md shadow-sm">
