--- a/src/_includes/home_hero.liquid
+++ b/src/_includes/home_hero.liquid
@@ -1,9 +1,8 @@
 <div class="relative bg-gray-50 overflow-hidden">
   <div class="relative pt-6 pb-12 sm:pb-16 md:pb-20 lg:pb-28 xl:pb-32">
-
     <main class="mt-10 mx-auto max-w-screen-xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 xl:mt-28">
       <div class="text-center">
-        <h2 class="text-4xl tracking-tight leading-10 font-extrabold text-gray-900 sm:text-5xl sm:leading-none md:text-6xl">
+        <h2 class="text-xl tracking-tight leading-2 font-extrabold text-gray-900 sm:text-5xl sm:leading-none md:text-6xl">
           You Got This is a network of community conferences focusing on core skills needed for a
           <span class="text-pink-600">happy, healthy work life</span>
         </h2>
