--- a/src/_includes/home_photos.liquid
+++ b/src/_includes/home_photos.liquid
@@ -1,13 +1,4 @@
-{% comment %} <div id="highlights">
-  <div class="photos">
-    {% for i in (1..6) %}
-      <img data-src="/assets/img/homepage/{{i}}.jpg" class='lazyload'>
-    {% endfor %}
-  </div>
-  <p><a href="/photos">Click here to view more photos from previous events</a></p>
-</div> {% endcomment %}
-
-<div class='max-w-screen-xl mx-auto grid gap-4 p-4 grid-cols-2 sm:grid-cols-3 lg:gap-8 lg:p-8 lg:grid-cols-6'>
+<div class='max-w-screen-xl mx-auto grid gap-4 p-4 grid-cols-2 sm:grid-cols-3 lg:grid-cols-6'>
   {% for i in (1..6) %}
     <img class="relative mx-auto w-full rounded-lg shadow-lg lg:max-w-md" src="https://images.unsplash.com/photo-1556740758-90de374c12ad?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Woman making a sale">
   {% endfor %}
