--- a/src/pages/home.liquid
+++ b/src/pages/home.liquid
@@ -7,8 +7,8 @@ permalink: /
 <div id="home">
   {% include home_hero %}
   {% include home_photos %}
+  {% include home_talk_highlights %}
   {% include home_upcoming %}
-  {% include talks_list, title: 'Talks From Previous Events' %}
-  {% include home_sponsors %}
-  {% include home_past %}
+  {% comment %} {% include home_sponsors %} {% endcomment %}
+  {% comment %} {% include home_past %} {% endcomment %}
 </div>
