--- a/src/pages/home.liquid
+++ b/src/pages/home.liquid
@@ -8,7 +8,6 @@ permalink: /
   {% include home_hero %}
   {% include home_photos %}
   {% include home_talk_highlights %}
-  {% include home_upcoming %}
-  {% comment %} {% include home_sponsors %} {% endcomment %}
-  {% comment %} {% include home_past %} {% endcomment %}
+  {% include home_events %}
+  {% include home_sponsors %}
 </div>
