--- a/src/_layouts/base.liquid
+++ b/src/_layouts/base.liquid
@@ -24,7 +24,7 @@
     <div class="page">
       {{content | safe}}
     </div>
-    {% comment %} {% include footer %} {% endcomment %}
+    {% include footer %}
     <script src="/assets/js/lazysizes.js"></script>
   </body>
 </html>
