--- a/src/pages/home.liquid
+++ b/src/pages/home.liquid
@@ -10,4 +10,5 @@ permalink: /
   {% include home_talk_highlights %}
   {% include home_events %}
   {% include home_sponsors %}
+  {% include newsletter_cta %}
 </div>
