--- a/src/_layouts/base.liquid
+++ b/src/_layouts/base.liquid
@@ -19,9 +19,9 @@
     <meta name="og:description" content="A network of community conferences on the non-technical 'core' skills needed for a happy, healthy work life.">
     <meta name="monetization" content="$ilp.uphold.com/DBEbnWEmPyJJ">
   </head>
-  <body>
+  <body class='flex flex-col min-h-screen'>
     {% include header %}
-    <div class="page">
+    <div class="page flex-1">
       {{content | safe}}
     </div>
     {% include footer %}
