--- a/src/_layouts/content.liquid
+++ b/src/_layouts/content.liquid
@@ -2,7 +2,7 @@
 layout: base
 ---
 
-<div id="content-page">
+{% comment %} <div id="content-page">
 
   <h1>{{title}}</h1>
 
@@ -10,4 +10,13 @@ layout: base
     {{content}}
   </article>
 
+</div> {% endcomment %}
+
+<div class="relative py-16 bg-white overflow-hidden">
+  <div class="relative px-4 sm:px-6 lg:px-8">
+    <h1 class="mt-2 mb-8 text-3xl text-center leading-8 font-extrabold tracking-tight text-pink-600 sm:text-4xl sm:leading-10">{{ title }}</h1>
+    <div class="prose prose-lg text-gray-500 mx-auto">
+      {{ content }}
+    </div>
+  </div>
 </div>
