--- a/src/_layouts/talk.liquid
+++ b/src/_layouts/talk.liquid
@@ -2,45 +2,65 @@
 layout: base
 ---
 
-<div id="talk-page">
-  <div id="top">
-    <h1>{{talk.title}}</h1>
-    <p>Presented by {{speaker.name}} at {{event}}</p>
+<div class="max-w-screen-xl mx-auto px-4">
+  <div class='text-center tracking-tight leading-2 font-extrabold pb-10 pt-8 md:pt-10 lg:pt-16' >
+    <h1 class="text-xl text-pink-600 sm:text-5xl sm:leading-none md:text-6xl">{{talk.title}}</h1>
+    <h2 class="text-lg text-gray-700 pt-4">Presented by {{speaker.name}} at {{event}}</h2>
   </div>
-
-  <div class='video-container'>
-    <video id='video' playsinline controls preload="metadata"></video>
-    <small>Video hosting kindly provided by <a href="https://mux.com/">Mux - video for developers</a></small>
-  </div>
-  
-
-  <main>
-    <article>
-      <h2>Transcript</h2>
-      <small>These transcripts were captured live by a captioner. As such, there may be small errors. If you spot any, please feel free to <a href="https://github.com/yougotthisconf/yougotthis.io/tree/main/{{page.inputPath}}">submit a pull request</a> with amendments.</small>
-      {{content}}
-    </article>
-    <aside>
-      <section>
-        <h2>About the talk</h2>
-        <p class='abstract'>{{talk.abstract}}</p>
-        {% include tag_list, tags: tags, links: true %}
-      </section>
-      <section>
-        <h2>About the speaker</h2>
-        <p>{{speaker.bio}}</p>
-        {% if speaker.twitter %}
-          <p><a href="https://twitter.com/{{speaker.twitter}}">Follow @{{speaker.twitter}} on Twitter</a></p>
-        {% endif %}
-      </section>
+  <video id='video' class='w-full lg:pt-10' playsinline controls preload="metadata"></video>
+  <p class='text-right text-sm text-gray-700 pb-10 lg:pb-16'>Video hosting kindly provided by <a class='text-pink-600' href="https://mux.com/">Mux - video for developers</a></p>
+  <div class="mb-16 -mx-2 flex flex-col-reverse lg:flex-row">
+    <div class="w-full lg:w-2/3 px-4">
+      <div class="text-gray-700">
+        <h2 class="text-2xl tracking-tight leading-2 font-extrabold">Transcript</h2>
+        <div class="prose max-w-full text-gray-500">
+          <p class='text-sm italic pt-4'>These transcripts were captured live by a captioner. As such, there may be small errors. If you spot any, please feel free to <a class='text-pink-600' href="https://github.com/yougotthisconf/yougotthis.io/tree/main/{{page.inputPath}}">submit a pull request</a> with amendments.</p>
+          {{ content }}
+        </div>
+      </div>
+    </div>
+    <div class="w-full lg:w-1/3 px-4">
+      <div class="max-w rounded overflow-hidden shadow-lg border border-gray-200 flex flex-col mb-8">
+        <div class="px-6 py-4 flex-grow">
+          <div class="font-bold text-xl my-2">About the talk</div>
+          <p class="text-gray-700 text-base mb-2">{{ talk.abstract }}</p>
+          <div class="py-2">
+            {% for tag in tags %}
+              {% if tag != 'talk' %}
+                <a class="inline-block rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2 bg-pink-100 uppercase" href="/tags/{{tag}}">
+                  {{ tag | replace: "-", " " }}
+                </a>
+              {% endif %}
+            {% endfor %}
+          </div>
+        </div>
+      </div>    
+      <div class="max-w rounded overflow-hidden shadow-lg border border-gray-200 flex flex-col mb-8">
+        <div class="px-6 py-4 flex-grow">
+          <div class="font-bold text-xl my-2">About the speaker</div>
+          <p class="text-gray-700 text-base">{{speaker.bio}}</p>
+          {% if speaker.twitter %}
+            {% comment %} <p><a href="">Follow @{{speaker.twitter}} on Twitter</a></p> {% endcomment %}
+            <a href="https://twitter.com/{{speaker.twitter}}" class="mt-5 mb-2 text-gray-400 hover:text-gray-500 flex items-center">
+              <span class="sr-only">Twitter</span>
+              <svg class="h-6 w-6 mr-2" fill="currentColor" viewBox="0 0 24 24">
+                <path d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84" />
+              </svg>
+              <span>@{{ speaker.twitter }}</span>
+            </a>
+          {% endif %}
+        </div>
+      </div> 
       {% if notes %}
-        <section>
-          <h2>Notes & resources</h2>
-          {{notes}}
-        </section>
-      {% endif %}
-    </aside>
-  </main>
+        <div class="max-w rounded overflow-hidden shadow-lg border border-gray-200 flex flex-col mb-8">
+          <div class="px-6 pt-4 pb-6 flex-grow">
+            <div class="font-bold text-xl my-2">Notes</div>
+            <p class="text-gray-700 text-base">{{ notes }}</p>
+          </div>
+        </div>  
+      {% endif %}  
+    </div>
+  </div>
 </div>
 
 <script src="/assets/js/hls.js"></script>
