--- a/src/_includes/home_photos.liquid
+++ b/src/_includes/home_photos.liquid
@@ -3,3 +3,6 @@
     <img class="relative mx-auto w-full rounded-lg shadow-lg lg:max-w-md" src="https://images.unsplash.com/photo-1556740758-90de374c12ad?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Woman making a sale">
   {% endfor %}
 </div>
+<span class="flex justify-center rounded-md p-4">
+  <a href="/photos" class="whitespace-no-wrap px-4 py-2 text-base leading-6 font-medium rounded-md text-white bg-pink-600 hover:bg-pink-500 focus:outline-none focus:border-pink-700 focus:shadow-outline-pink active:bg-pink-700 transition ease-in-out duration-150">All Event Photos</a>
+</span>
