Fixed couch page tailwind link

--- a/src/_includes/home_photos.liquid
+++ b/src/_includes/home_photos.liquid
@@ -1,4 +1,4 @@
-<div class='max-w-screen-xl mx-auto grid gap-4 p-4 grid-cols-2 sm:grid-cols-3 lg:grid-cols-6'>
+<div class='max-w-screen-xl mx-auto grid gap-4 p-4 mt-10 grid-cols-2 sm:grid-cols-3 lg:grid-cols-6'>
   {% for photo in photos %}
     {% if photo.highlight %}
       <img class="relative mx-auto w-full rounded-lg shadow-lg lg:max-w-md" src="/assets/img/events/{{photo.event}}/{{photo.file}}_home.jpg" alt="{{photo.text}}">
