added tailwind typography

--- a/src/_layouts/talk.liquid
+++ b/src/_layouts/talk.liquid
@@ -36,18 +36,18 @@ layout: base
         </div>
       </div>    
       <div class="max-w rounded overflow-hidden shadow-lg border border-gray-200 flex flex-col mb-8">
-        <div class="px-6 py-4 flex-grow">
+        <div class="px-6 pt-4 pb-6 flex-grow">
           <div class="font-bold text-xl my-2">About the speaker</div>
           <p class="text-gray-700 text-base">{{speaker.bio}}</p>
-          {% if speaker.twitter %}
-            <a href="https://twitter.com/{{speaker.twitter}}" class="mt-5 mb-2 text-gray-400 hover:text-gray-500 flex items-center">
-              <span class="sr-only">Twitter</span>
-              <svg class="h-6 w-6 mr-2" fill="currentColor" viewBox="0 0 24 24">
-                <path d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84" />
-              </svg>
-              <span>@{{ speaker.twitter }}</span>
-            </a>
-          {% endif %}
+          <a class="flex items-center pt-6" {% if speaker.twitter %}href="https://twitter.com/{{speaker.twitter}}"{% endif %}>
+            <img class="w-10 h-10 rounded-full mr-4" src="/assets/img/speakers/{{speaker.photo}}" alt="Photo of {{speaker.name}}">
+            <div class="text-sm">
+              <p class="text-gray-900 leading-none">{{speaker.name}}</p>
+              {% if speaker.twitter %}
+                <p class="text-gray-700">@{{speaker.twitter}}</p>
+              {% endif %}
+            </div>
+          </a>
         </div>
       </div> 
       {% if notes %}
