--- a/src/pages/photos.liquid
+++ b/src/pages/photos.liquid
@@ -43,4 +43,7 @@ events:
 @media screen and (max-width: 640px) { 
   .photos { columns: 4 }
 }
+@media screen and (max-width: 400px) { 
+  .photos { columns: 3 }
+}
 </style>
