--- a/src/_includes/home_events.liquid
+++ b/src/_includes/home_events.liquid
@@ -1,6 +1,6 @@
-<div class='mt-10 mb-8'>
+<div class='my-10 lg:my-32'>
   <h2 class="text-center tracking-tight leading-2 font-extrabold text-gray-900 text-2xl sm:leading-none sm:text-3xl md:text-5xl p-4">You Got This Events</h2>
-  <div class="grid grid-cols-1 gap-4 max-w-screen-xl mx-auto p-4 mt-5 sm:grid-cols-2 lg:grid-cols-3">
+  <div class="grid grid-cols-1 gap-4 max-w-screen-xl mx-auto p-4 lg:mt-5 sm:grid-cols-2 lg:grid-cols-3">
     {% for event in events %}
       <a class="max-w rounded overflow-hidden shadow-lg border border-gray-200 
       {% if event.upcoming %}bg-indigo-600 text-white{% else %}bg-indigo-100{% endif %}" 
