--- a/src/_includes/home_photos.liquid
+++ b/src/_includes/home_photos.liquid
@@ -1,4 +1,4 @@
-<div class='max-w-screen-xl mx-auto grid gap-4 p-4 mt-10 grid-cols-2 sm:grid-cols-3 lg:grid-cols-6'>
+<div class='max-w-screen-xl mx-auto grid gap-4 p-4 lg:mt-32 grid-cols-2 sm:grid-cols-3 lg:grid-cols-6'>
   {% for photo in photos %}
     {% if photo.highlight %}
       <img class="relative mx-auto w-full rounded-lg shadow-lg lg:max-w-md" src="/assets/img/events/{{photo.event}}/{{photo.file}}_home.jpg" alt="{{photo.text}}">
@@ -6,5 +6,5 @@
   {% endfor %}
 </div>
 <span class="flex justify-center rounded-md p-4">
-  <a href="/photos" class="whitespace-no-wrap px-4 py-2 text-base leading-6 font-medium rounded-md text-white bg-pink-600 hover:bg-pink-500 focus:outline-none focus:border-pink-700 focus:shadow-outline-pink active:bg-pink-700 transition ease-in-out duration-150">All Event Photos</a>
+  <a href="/photos" class="whitespace-no-wrap px-4 py-2 lg:mb-8 text-base leading-6 font-medium rounded-md text-white bg-pink-600 hover:bg-pink-500 focus:outline-none focus:border-pink-700 focus:shadow-outline-pink active:bg-pink-700 transition ease-in-out duration-150">All Event Photos</a>
 </span>
