--- a/src/_includes/home_sponsors.liquid
+++ b/src/_includes/home_sponsors.liquid
@@ -1,4 +1,4 @@
-<div class="bg-white">
+<div class="bg-white lg:mb-12">
   <div class="max-w-screen-xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8">
     <p class="text-center text-base leading-6 font-semibold uppercase text-gray-700 tracking-wider">
       Thank you to all of the organizations who have supported our events
