--- a/src/_includes/talk_card.liquid
+++ b/src/_includes/talk_card.liquid
@@ -3,7 +3,7 @@
     <div class="font-bold text-xl my-2">{{ talk.data.talk.title }}</div>
   </div>
   <div class="flex items-center px-6 pb-6">
-    <img class="w-10 h-10 rounded-full mr-4" src="/assets/img/speakers/{{talk.data.speaker.photo}}" alt="Photo of {{talk.data.speaker.name}}">
+    <img class="w-10 h-10 rounded-full mr-4" src="/assets/img/people/{{talk.data.speaker.photo}}" alt="Photo of {{talk.data.speaker.name}}">
     <div class="text-sm">
       <p class="text-gray-900 leading-none">{{talk.data.speaker.name}}</p>
       {% if talk.data.speaker.twitter %}
