--- a/src/pages/home.liquid
+++ b/src/pages/home.liquid
@@ -8,5 +8,6 @@ permalink: /
 {% include home_photos %}
 {% include home_talk_highlights %}
 {% include home_events %}
+{% include home_testimonials %}
 {% include home_sponsors %}
 {% include newsletter_cta %}
